k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  replicas: 2
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: front-end-deployment
  template:
    metadata:
      labels:
        app: front-end-deployment
    spec:
      containers:
      - name: front-end-deployment
        image: registry.gitlab.com/afrikpay1/gulfcam-angular:108
        resources:
          limits:
            memory: "50Mi"
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name : front-end-port
      imagePullSecrets: 
      - name: front-end-docker-secret
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  selector:
    app: front-end-deployment
  ports:
  - port: 80
    targetPort: front-end-port
    nodePort: 30003
