k8s/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-deny-ingress
spec:
  podSelector: 
    matchLabels:
      app: front-end-service
  policyTypes:
  - Egress
